<resources>
    <string name="app_name">Propuesta</string>
    <string name="TV_CreateProd">Crear Producto</string>
    <string name="eTx_CrearProd_Id">Ingresa Identificador</string>
    <string name="eTx_CrearProd_Nombre">Ingresa nombre del producto</string>
    <string name="EdTx_CrearProd_Cantidad">Ingresar cantidad de producto</string>
    <string name="EdTxt_CrearProd_Precio">Ingresar precio del producto</string>
    <string name="btn_CrearProd">Crear un producto</string>
    <string-array name="sucursales">
        <item>San Miguel</item>
        <item>Pedro Aguirre Cerda</item>
        <item>Santiago</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TV_CL_TitleS">Ingrese  Nuevo Cliente</string>
    <string name="CL_SelectComuna">Seleccione una comuna</string>
    <string name="ingrese_su_run">Ingrese su RUN</string>
    <string name="ETV_CL_Name">Ingrese el Nombre</string>
    <string name="ETV_CL_Apellido2">Ingrese el Apellido1</string>
    <string name="ETV_CL_Apellido1">Ingrese el Apellido 1</string>
    <string name="btn_CL_agregar">Agregar</string>
    <string name="btn_CL_Cancelar">Cancelar</string>
    <string name="TV_CL_VerClientes">Clientes registrados</string>
    <string name="F_CL_Seleccion">¿Que desea hacer?</string>
    <string name="RB_CL_buscar_por_rut">Buscar por RUT</string>
    <string name="RB_CL_buscar_por_nombre">Buscar por Nombre</string>
    <string name="TV_CL_buscar_cliente_costo_total">Buscar cliente / Costo total</string>
    <string name="ET_CL_Nombre">Ingrese Nombre del cliente</string>
    <string name="ET_CL_Apellido1">Ingrese Apellido del cliente</string>
    <string name="ET_CL_buscar">Buscar</string>
    <string-array name="F_MostrarCliente_Opcion">
        <item>Seleccione...</item>
        <item>Buscar un Cliente</item>
        <item>Buscar el costo total</item>
        <item>Buscar Sucursales Cercanas</item>
    </string-array>
</resources>